<resources>
    <string name="app_name">E-Kart</string>
    <string name="splash_text">Lorem ipsum dolor sit amet,consecteur adipsicing is aliquip ex ea commodo</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="forgotPassword">Forgot Your Password?</string>
    <string name="clickHere">click here</string>
    <string name="signIn_Now">SignIn Now</string>
    <string name="dontHaveanAccount">Don\'t have an account? Please</string>
    <string name="hello">Hello!</string>
    <string name="pleaseEnterYourEmail">Please enter  Email</string>
    <string name="pleaseEnterPassword">Please enter Password</string>
    <string name="pleaseEnterValidEmail">Plesae enter valid Email</string>
    <string name="loadingpleasewait">Loading please wait...</string>
    <string name="loginFail">Log in fail</string>
    <string name="loginsecreentext">Follows a very easy login process. It\\\'s never been so east to get in.</string>
    <string name="signup"><b> Signup</b></string>
    <string name="Logout">Log Out</string>
    <string name="noordercreatedyet">No order Yet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="makepayment">MAKE PAYMENT</string>
    <string name="loadproducts">Loading Prodcuts...</string>
    <string name="per_ltr"></string>
    <string name="once">Once</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="qty">QTY:</string>
    <string name="ltr"></string>
    <string name="outofstock">OUT OF STOCK</string>
    <string name="SelectyourCity">Select Your City</string>
    <string name="databaseerror">Enable to update profile.</string>
    <string name="profile">Profile</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="unabletocreateqr">Unable to create Qr code</string>
    <string name="action_edit">Edit Profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="addToCart">Add to cart</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="itemaddedtocart">Item added to cart.</string>
    <string name="noitemaddyet">No item added yet..</string>
    <string name="hello_world">hello</string>
    <string name="adressString">Ganesh Das 1st floor, A 63 yamhuna Ngar sector 49 Noida-160034 Delhi Mobile: +7814474403</string>
    <string name="addAddress">Add Address</string>
    <string name="done">Done</string>
    <string name="no_addres_yet">No address yet..</string>
    <string name="update">Update</string>
    <string name="updateAddress">Update Address</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="proceedTOAdddress">PROCEED TO ADDRESS</string>
    <string name="title_activity_pyament">Complete Your Payment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completeyourpayment">Complete Your Payment</string>
    <string name="cardNumber">Card Number</string>
    <string name="nameoncard">Name On Card</string>
    <string name="expirationDtae">Expiration Date</string>
    <string name="completeyourPayment">Complete Your Payment</string>
    <string name="securityCode">Security Code</string>
    <string name="personalinfo">Personal Information</string>
    <string name="updateinfo">Update Info</string>
    <string name="signupnow">SignUp</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="login"><b> Login</b></string>
    <string name="getstarted">Get Started</string>
    <string name="pleaseenterusername">Please enter user name</string>
    <string name="pleaseEnterAddress">Please enter the address</string>
    <string name="pleaseEnterState">Please enter the state</string>
    <string name="pleaseEnterCity">Please enter the city</string>
    <string name="pleaseEnterPinCode">Please enter the pincode</string>
    <string name="pleaseEnterCountry">Please enter the country name</string>
    <string name="pleaseEnterEmail">Please enter the email</string>
    <string name="youOrderGeneratedSuccesfully">your order generated successfully</string>
    <string name="usernamemusthavetwocharacter">user name must have atleast two charactes</string>
    <string name="pleaseEnterphnnumber">Please enter the phone number</string>
    <string name="passwrdmustcontains">Password must contains atleast 6 charactes</string>
    <string name="registrationfail">registeration fail</string>
    <string name="noorderhistoryyet">No order  yet...</string>
    <string name="delivered">Delivered</string>
    <string name="pending">Pending</string>

</resources>

