<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activtiy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarThumbVertical="@null"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/login_bgg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/helping_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layoutForm"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_logo" />

                <com.rg.milkwala.view.controls.TextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <com.rg.milkwala.view.controls.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/loginsecreentext"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bigmillk"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="80dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.rg.milkwala.view.controls.EditTextRegular
                        android:id="@+id/edittext_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/edittext_drawable"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="10dp"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/text_colour"
                        android:textColorHint="@color/txt_hintcolor"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:id="@+id/ImageviewEmailTick"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="15dp"
                        android:src="@drawable/tick" />
                </RelativeLayout>

                <com.rg.milkwala.view.controls.EditTextRegular
                    android:id="@+id/edittext_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/edittext_drawable"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_colour"
                    android:textColorHint="@color/txt_hintcolor"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <com.rg.milkwala.view.controls.TextViewRegular
                        android:id="@+id/textview_login_forgtpasswrd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/forgotPassword"
                        android:textSize="12dp" />

                    <com.rg.milkwala.view.controls.TextViewRegular
                        android:id="@+id/textview_login_clickhere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/clickHere"
                        android:textSize="12dp" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textview_login_clickhere"
                        android:background="@color/text_colour"></View>
                </RelativeLayout>

                <com.rg.milkwala.view.controls.ButtonRegular
                    android:id="@+id/button_signinnow"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/buttonclick_login"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/signIn_Now"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center">

                    <com.rg.milkwala.view.controls.TextViewRegular
                        android:id="@+id/helping_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dontHaveanAccount"
                        android:textSize="12dp" />

                    <com.rg.milkwala.view.controls.TextViewRegular
                        android:id="@+id/textview_login_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_toRightOf="@+id/helping_textview"
                        android:text="@string/signup"
                        android:textSize="12dp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
